--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body ng-cloak layout-fill style="height: 100vh; width: 100vh; background: #02059B">
+<body ng-cloak layout-fill style="background: #02059B; margin: auto;">
   <app-root></app-root>
 </body>
 </html>
